name:                   yesod-test-stateful
version:                0.1.0.0
synopsis:               Integration testing for Yesod apps that need test state.
homepage:               https://github.com/whittle/yesod-test-stateful#readme
license:                MIT
license-file:           LICENSE.md
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2016 Jason A. Whittle
category:               Web, Yesod, Testing
build-type:             Simple
cabal-version:          >= 1.10
stability:              experimental
bug-reports:            https://github.com/whittle/yesod-test-stateful/issues
description:
  yesod-test-stateful is a new Haskeleton package.

extra-source-files:     CHANGELOG.md
                      , LICENSE.md
                      , README.md
                      , stack.yaml

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       library
  exposed-modules:      Example

test-suite test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:        base
                      , yesod-test-stateful
                      , tasty
                      , tasty-hspec
  hs-source-dirs:       test-suite
  main-is:              Main.hs

source-repository head
  type: git
  location: https://github.com/whittle/yesod-test-stateful
