name:                   yesod-test-stateful
version:                0.1.0.0
synopsis:               Integration testing for Yesod apps that need test state.
homepage:               https://github.com/whittle/yesod-test-stateful#readme
license:                MIT
license-file:           LICENSE.md
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2016 Jason A. Whittle
category:               Web, Yesod, Testing
build-type:             Simple
cabal-version:          >= 1.10
stability:              experimental
bug-reports:            https://github.com/whittle/yesod-test-stateful/issues
description:
  .
  `yesod-test-stateful` is a fork of `yesod-test` that adds the
  ability to thread some additional state through test cases. This is
  especially helpful in creating mocks for network access and other IO
  actions in the Yesod app under test.

extra-source-files:     CHANGELOG.md
                      , LICENSE.md
                      , README.md
                      , stack.yaml

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base                      >= 4.3      && < 5
                      , blaze-builder
                      , bytestring                >= 0.9
                      , case-insensitive          >= 0.2
                      , containers
                      , cookie
                      , hspec-core                == 2.2.*
                      , html-conduit              >= 0.1
                      , http-types                >= 0.7
                      , HUnit                     >= 1.2
                      , network                   >= 2.2
                      , pretty-show               >= 1.6
                      , text
                      , time
                      , transformers              >= 0.2.2
                      , wai                       >= 3.0
                      , wai-extra
                      , xml-conduit               >= 1.0
                      , yesod-core                >= 1.4.14
                      , yesod-test                >= 0.2
  hs-source-dirs:       src
  exposed-modules:      Yesod.Test.Stateful

test-suite test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:        base
                      , yesod-test-stateful
                      , tasty
                      , tasty-hspec
  hs-source-dirs:       test
  main-is:              Main.hs

source-repository head
  type: git
  location: https://github.com/whittle/yesod-test-stateful
